--- a/Tutorial/ios/Podfile
+++ b/Tutorial/ios/Podfile
@@ -11,6 +11,11 @@ target 'Tutorial' do
     # to enable hermes on iOS, change `false` to `true` and then install pods
     :hermes_enabled => false
   )
+  permissions_path = '../node_modules/react-native-permissions/ios'
+  pod 'Permission-Camera', :path => "#{permissions_path}/Camera"
+  pod 'react-native-cameraroll', :path => '../node_modules/@react-native-community/cameraroll'
+
+  pod 'RNImageMarker', :path => '../node_modules/react-native-image-marker'
 
   target 'TutorialTests' do
     inherit! :complete
@@ -24,23 +29,7 @@ target 'Tutorial' do
   #use_flipper!()
   #use_flipper!({ 'Flipper-Folly' => '2.5' }) # update this part
   use_flipper!({ 'Flipper-Folly' => '2.5.3', 'Flipper' => '0.87.0', 'Flipper-RSocket' => '1.3.1' })
-  # post_install do |installer|
-  #   #react_native_post_install(installer)
-	#   flipper_post_install(installer)
-	#   installer.pods_project.build_configurations.each do |config|     
-  #     config.build_settings["EXCLUDED_ARCHS[sdk=iphonesimulator*]"] = "arm64"   
-  #   end
-  #   installer.pods_project.targets.each do |t|
-  #     t.build_configurations.each do |bc|
-  #           if bc.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] == '8.0'
-  #               bc.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '13.4'
-  #           end
-  #       end
-  #   end
-  # end
-  # post_install do |installer|
-  #   react_native_post_install(installer)
-  # end
+
   post_install do |installer|
     react_native_post_install(installer)
     installer.pods_project.build_configurations.each do |config|
