--- a/Tutorial/ios/TutorialTests/Info.plist
+++ b/Tutorial/ios/TutorialTests/Info.plist
@@ -20,5 +20,7 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>NSCameraUsageDescription</key>
+    <string>Camera를 사용합니다</string>
 </dict>
 </plist>
