--- a/Tutorial/package.json
+++ b/Tutorial/package.json
@@ -10,13 +10,20 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/cameraroll": "^4.0.4",
+    "fbjs": "^3.0.0",
     "react": "17.0.1",
-    "react-native": "0.64.2"
+    "react-native": "0.64.2",
+    "react-native-camera": "git+https://git@github.com/react-native-community/react-native-camera.git",
+    "react-native-image-marker": "^0.6.2",
+    "react-native-permissions": "^3.0.5",
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.8",
     "@babel/runtime": "^7.14.8",
     "@react-native-community/eslint-config": "^3.0.0",
+    "@types/styled-components-react-native": "^5.1.1",
     "babel-jest": "^27.0.6",
     "eslint": "^7.31.0",
     "jest": "^27.0.6",
